<resources>
    <string name="app_name">SoftyDraw</string>
    <string name="paint">paint</string>
    <string name="action_settings">Setting</string>
    <string name="save">Sauvegarder</string>
    <string name="new_drawing">Nouveau</string>
    <string name="div1">div1</string>
    <string name="erase">Effacer</string>
    <string name="changeBrush">10</string>
    <string name="brush1">Fin</string>
    <string name="brush2">Moyen</string>
    <string name="brush3">Epais</string>
    <string name="addButton">Ajouter couleur</string>
    <string name="finger1">1</string>
</resources>
